# sublemonable

./: .gitignore  CHANGELOG.md  README.md  RUN_LEDGER.md  docker-compose.i2p.yml  docker-compose.tor.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sublemonable-MASTER.json
.github/workflows/: ci.yml  release-apk.yml
.l00prite/: constraints.md  heartbeat.json  ledger.md  memory.md  state.json  todos.md
Claude/: sublemonable-MASTER (1).json  sublemonable-v1.5-blueprint.json
apps/android/: .gitignore
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/gradle/: libs.versions.toml
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: i2p.rs  keystore.rs  lib.rs  pinning.rs  screenshot.rs  tor.rs  transport.rs  window.rs
apps/ios/: README.md  project.yml
apps/ios/Configuration/: Release.xcconfig
apps/ios/NotificationService/: Info.plist  NotificationService.swift
apps/ios/Sources/: SublemonableApp.swift
apps/ios/Support/: Info.plist
apps/ios/Tests/: MessagePaddingTests.swift
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  config.ts  index.css  settings.ts  store.ts
docs/: RELEASING_ANDROID.md  SECURITY_MODEL.md  SELF_HOSTING.md  SETUP.md  TOR_ARCHITECTURE.md  V1_5_STATUS.md  V1_AUDIT.md
i2p/: tunnels.conf
onion-site/: SHA256SUMS  index.html
scripts/: release-android-on-box.sh
server/: .env.example  Dockerfile  go.mod  go.sum
server/cmd/server/: main.go  onion.go
server/internal/api/: drops.go  handlers.go  relay.go
server/internal/auth/: jwt.go  jwt_test.go  xeddsa.go  xeddsa_test.go
server/internal/config/: config.go
server/internal/db/: queries.sql  schema.sql  store.go
tor/: torrc
website/: DEPLOY.md  package.json
(+57 files in other folders)
